--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,17 @@
 
+<div class="ui containter">
+  <app-sidebar></app-sidebar>
+  <div class="ui divided items">
+     <app-article
+        *ngFor="let article of articles"
+          [article]="article"
+          class='item'>
+      </app-article>
+  </div>
+</div>
+
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome EJW to {{ title }}!
   </h1>
@@ -17,5 +28,5 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
 
