--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 
 <div class="ui containter">
   <app-sidebar></app-sidebar>
-  <div class="ui divided items">
-     <app-article
-        *ngFor="let article of articles"
-          [article]="article"
-          class='item'>
-      </app-article>
-  </div>
+  <app-article-list
+    [articles]="articles"
+  ></app-article-list>
 </div>
 
 <!--The content below is only a placeholder and can be replaced.-->
